--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -100,6 +100,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/roundedit"
@@ -109,7 +110,10 @@
             android:paddingLeft="10dp"
             android:textColorHint="#838383"
             android:textSize="14dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:inputType="phone"
+            android:lines="1"
+            android:maxLength="14"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
