--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,12 +90,16 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:paddingLeft="10dp"
             android:maxWidth="360dp"
             android:textSize="14dp"
             android:textStyle="bold"
+            android:inputType="phone"
+            android:lines="1"
+            android:maxLength="14"
             android:fontFamily="@font/proxima"
             android:background="@drawable/roundedit"
             android:hint="Mobile Number"
@@ -103,7 +107,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/appCompatButton"
+        android:id="@+id/btnContinue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxWidth="360dp"
@@ -115,7 +119,7 @@
         android:text="Continue"
         android:textAllCaps="false"
         android:textStyle="bold"
-        android:textColor="#0f9be7"
+        android:textColor="@color/btntextcolor"
         android:textSize="16dp"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
 
@@ -128,7 +132,7 @@
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
+        app:layout_constraintTop_toBottomOf="@+id/btnContinue"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="40dp">
 
