--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+    <LinearLayout
+        android:id="@+id/linearMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_gravity="center">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
-
         android:layout_marginRight="20dp"
         tools:ignore="MissingConstraints">
         <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_marginTop="20dp"
             android:src="@mipmap/cross_foreground"/>
     </LinearLayout>
@@ -24,70 +33,57 @@
         android:layout_width="match_parent"
         android:layout_height="33dp"
         android:src="@drawable/ic_skeps"
-        android:layout_marginTop="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01" />
+        android:layout_marginTop="4dp" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewverifymnumber"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="36dp"
         android:maxWidth="360dp"
         android:fontFamily="@font/proxima"
         android:gravity="center"
-        android:text="Verify Mobile Number"
-        android:textColor="#222222"
+        android:text="@string/verifyNumber"
+        android:textColor="@color/verifymobilecolor"
         android:textFontWeight="600"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:maxWidth="360dp"
+        android:gravity="center"
         android:text="A verification code will be texted to you."
         android:textColor="#838383"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="7dp" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewverify2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:gravity="center"
         android:text="@string/aVaritwo"
         android:maxWidth="360dp"
+        android:layout_gravity="center"
         android:textColor="#838383"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        android:textSize="16sp" />
+    <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxWidth="360dp"
+        android:maxWidth="100dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toBottomOf="@+id/textViewverify2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editPhoneNumber"
@@ -109,7 +105,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnContinue"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:maxWidth="360dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
@@ -124,11 +120,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="20dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -136,7 +131,7 @@
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="40dp">
 
-       <!-- <TextView
+        <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/proxima"
@@ -148,16 +143,112 @@
             android:id="@+id/terms"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:fontFamily="@font/proxima"
-            android:text="@string/termlink"
             android:layout_marginLeft="6dp"
-            android:textStyle="bold"
+            android:fontFamily="@font/proxima"
+            android:linksClickable="false"
+            android:selectAllOnFocus="false"
+            android:text="@string/termlink"
             android:textColor="#657bac"
             android:textColorLink="#2787ed"
-            android:selectAllOnFocus="false"
-            android:linksClickable="false"
-            android:textSize="12dp" />
+            android:textSize="12dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/frame1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        >
+
+        <!--<LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="26dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="-34dp">
+
+            <TextView
+                    android:id="@+id/textviewPhoneNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#222222"
+                android:textSize="16sp"
+                android:fontFamily="@font/proxima"
+                android:textFontWeight="500"
+                android:text="(200) 100-2000" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_name" />
+        </LinearLayout>-->
+        <!--<LinearLayout
+            android:id="@+id/root_otp_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="46dp"
+            android:padding="10dp"
+            android:orientation="horizontal"
+            android:weightSum="4">
+
+            <EditText
+                android:id="@+id/otp_edit_box1"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:inputType="number"
+                android:hint="5"
+                android:maxLength="1"
+                android:textSize="30sp"
+                android:background="@drawable/edittext_curve_bg"/>
+
+            <EditText
+                android:id="@+id/otp_edit_box2"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:inputType="number"
+                android:maxLength="1"
+                android:background="@drawable/edittext_curve_bg"/>
+
+            <EditText
+                android:id="@+id/otp_edit_box3"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:inputType="number"
+                android:maxLength="1"
+                android:background="@drawable/edittext_curve_bg"/>
+
+            <EditText
+                android:id="@+id/otp_edit_box4"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:layout_weight="1"
+                android:inputType="number"
+                android:maxLength="1"
+                android:background="@drawable/edittext_curve_bg" />
+
+
+        </LinearLayout>-->
+    </FrameLayout>
+
+</LinearLayout>
