--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.POS" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.POS" parent="Theme.MaterialComponents">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,15 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorAccent">@color/checkboxcolor</item>
+        <item name="android:textColorSecondary">@color/white</item>
+
     </style>
+    <style name="CheckboxStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">@color/checkboxcolor</item>
+        <item name="android:textColorSecondary">@color/white</item>
+    </style>
+
+    <style name="Theme.MyApp"
+    parent="Theme.MaterialComponents"/>
 </resources>
